Fix arrow in dark mode

--- a/assets/dev/scss/editor/_templates-modal.scss
+++ b/assets/dev/scss/editor/_templates-modal.scss
@@ -765,7 +765,7 @@ label.elementor-template-library-order-label {
 			position: absolute;
 			border: solid transparent;
 			border-width: 8px 4px;
-			border-block-end-color: var(--e-a-color-white);
+			border-block-end-color: var(--e-a-bg-default);
 			transform: translateY(-100%);
 		}
 
